  06 Sep 2017; Manuel Friedli <manuel@fritteli.ch>
  -files/0001-fix-Makefile-1.10.4.patch, -files/0001-fix-Makefile-1.11.1.patch,
  -files/0001-fix-Makefile-1.8.0.patch, -files/0001-fix-Makefile.patch,
  -files/gitlab-ci-multi-runner.init, -gitlab-ci-multi-runner-1.10.4.ebuild,
  -gitlab-ci-multi-runner-1.11.1.ebuild, -gitlab-ci-multi-runner-1.7.0.ebuild,
  -gitlab-ci-multi-runner-1.8.0.ebuild, -gitlab-ci-multi-runner-1.9.2.ebuild:
  dev-vcs/gitlab-ci-multi-runner:  Prune ebuilds <9.3.0-r1

  30 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/gitlab-ci-multi-runner-9.3.0.init,
  gitlab-ci-multi-runner-9.3.0-r1.ebuild, gitlab-ci-multi-runner-9.4.1.ebuild:
  dev-vcs/gitlab-ci-multi-runner:  Hopefully fix the init script.

  30 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  gitlab-ci-multi-runner-9.3.0-r1.ebuild, gitlab-ci-multi-runner-9.4.1.ebuild:
  dev-vcs/gitlab-ci-multi-runner:  Fix name of installed binary.

*gitlab-ci-multi-runner-9.3.0-r1 (30 Jul 2017)

  30 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-ci-multi-runner-9.3.0-r1.ebuild, -gitlab-ci-multi-runner-9.3.0.ebuild,
  gitlab-ci-multi-runner-9.4.1.ebuild:
  dev-vcs/gitlab-ci-multi-runner:  Fix missing install of init script and add
  ebuild for version 9.4.1.

*gitlab-ci-multi-runner-9.3.0 (25 Jul 2017)

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-ci-multi-runner-9.3.0.ebuild:
  dev-vcs/gitlab-ci-multi-runner:  Add ebuild for version 9.3.0; copied from the
  mrueg overlay.

*gitlab-ci-multi-runner-1.11.1 (16 Mar 2017)

  16 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile-1.11.1.patch, +gitlab-ci-multi-runner-1.11.1.ebuild:
  dev-vcs/gitlab-ci-multi-runner:   Added ebuild for gitlab-ci-multi-
  runner-1.11.1

*gitlab-ci-multi-runner-1.10.4 (15 Feb 2017)

  15 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile-1.10.4.patch, +gitlab-ci-multi-runner-1.10.4.ebuild,
  gitlab-ci-multi-runner-1.9.2.ebuild: